--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
@@ -20,6 +21,9 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^5.1.1",
+    "lint-staged": "^10.5.4",
     "typescript": "~4.0.0"
   },
   "private": true
