--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,13 @@
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
+    "module": "ESNext",
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "strictNullChecks": true
   }
 }
