--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-vector-icons": "^8.1.0",
     "reactotron-react-native": "^5.0.0",
     "typescript": "~4.0.0"
