--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
+    "jsx": "preserve",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "module": "ESNext",
     "noEmit": true,
+    "isolatedModules": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
